--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <div class="header">
-    <h1>LightSpeed</h1>
+    <h1>Barry Dillon</h1>
     <br>
-    <h5><i>Some catchy headline text</i></h5>
+    <h5><i>Theoretical Physicist</i></h5>
+    <h5><i>Lecturer in Mathematics at Ulster University Derry</i></h5>
     <br>
     {% include nav.html %}
     <hr>
