--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
     <span class="footer-text float-right">
-    Site Updated: {{ site.time | date: '%Y-%m-%d' }} {{ site.timezone_short }} (<a href="/feed.xml" target="_blank">RSS</a>)
+    Site Updated: {{ site.time | date: '%Y-%m-%d' }} {{ site.timezone_short }}
   </span>
 </div>
