--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,20 @@
 
         <main class="wrapper-main">
             <div class="main-content">
-            {{ content }}
+        
+                {% if page.title %}
+                <header class="page-header">
+                    <h1 class="page-title">{{ page.title }}</h1>
+                    {% if page.photo %}
+                    <img src="{{ page.photo }}" alt="Photo" class="page-photo">
+                    {% endif %}
+                </header>
+                {% endif %}
+        
+                {{ content }}
             </div>
         </main>
+
     </div>
 
     <footer class="wrapper-footer">
