--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,8 @@
 <div class="header">
     <h1>Barry Dillon</h1>
-    <br>
+    <img src="/assets/profile-picture.jpg" alt="Photo of Barry" class="header-photo">
     <h5><i>Theoretical Physicist</i></h5>
-    <br>
     <h5><i>Lecturer in Mathematics at Ulster University Derry</i></h5>
-    <br>
     {% include nav.html %}
     <hr>
 </div>
