--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -29,8 +29,8 @@
 
 .header-photo {
   position: absolute;
-  top: 0.5rem;
-  right: 0;
+  top: 1.1rem;
+  right: 1rem;
   width: 120px;
   height: 120px;
   border-radius: 50%;
