--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
     <h1>Barry Dillon</h1>
     <br>
     <img src="/assets/profile-picture.jpg" alt="Photo of Barry" class="header-photo">
-    <h5><i id="role-rotator" data-role-en="Theoretical Physicist" data-role-ga="Fisiceoir teoiriciúil">Theoretical Physicist</i></h5>
+    <h5><i id="role-rotator" data-role-en="Theoretical Physicist" data-role-ga="Fisiceoir teoiriciúil">Fisiceoir teoiriciúil</i></h5>
     <br>
-    <h5><i id="title-rotator" data-title-en="Lecturer in Mathematics at Ulster University Derry" data-title-ga="Léachtóir matamaitice in Ollscoil Uladh, Doire">Lecturer in Mathematics at Ulster University Derry</i></h5>
+    <h5><i id="title-rotator" data-title-en="Lecturer in Mathematics at Ulster University Derry" data-title-ga="Léachtóir matamaitice in Ollscoil Uladh, Doire">Léachtóir matamaitice in Ollscoil Uladh, Doire</i></h5>
     <script>
         (function () {
             var roleEl = document.getElementById("role-rotator");
