--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <div class="header">
     <h1>Barry Dillon</h1>
     <br>
-    <img src="/assets/profile-picture.jpg" alt="Photo of Barry" class="header-photo">
+    <div class="header-photo-wrap">
+        <img src="/assets/profile-picture.jpg" alt="Photo of Barry" class="header-photo">
+    </div>
     <h5><i id="role-rotator" data-role-en="Theoretical Physicist" data-role-ga="Fisiceoir teoiriciúil">Fisiceoir teoiriciúil</i></h5>
     <br>
     <h5><i id="title-rotator" data-title-en="Lecturer in Mathematics at Ulster University Derry" data-title-ga="Léachtóir matamaitice in Ollscoil Uladh, Doire">Léachtóir matamaitice in Ollscoil Uladh, Doire</i></h5>
