--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -35,6 +35,7 @@
   height: 120px;
   border-radius: 50%;
   object-fit: cover;
+  object-position: 50% 10%;
   border: 3px solid #fff;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
 }
