--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -34,7 +34,7 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: 50% 35%;
   transform: scale(0.95);
   transform-origin: center;
